--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -8,6 +8,9 @@
 }
 
 /* Shared Style */
+.secondary-background{
+    background-color: #FFF8F3;
+}
 .text-primary{
     color: #FD6E0A;
 }
@@ -22,6 +25,15 @@
     border-radius: 5px;
     font-size: 20px;
     border: none;
+}
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
 }
 /* Header */
 .header{
@@ -69,4 +81,23 @@ nav li a{
 }
 .banner-profile-pic{
     width: 580px;
+}
+/* Main Styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+/* About Styles */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+}
+.item-description {
+    font-weight: 600;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
 }
