--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -35,6 +35,9 @@
     font-size: 18px;
     color: #757575;
 }
+.text-center{
+    text-align: center;
+}
 /* Header */
 .header{
     background-image: url(../images/developer.png), url(../images/header_bg.png);
@@ -87,12 +90,16 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
 /* About Styles */
 .about{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
+    
 }
 .item-description {
     font-weight: 600;
@@ -100,4 +107,13 @@ main{
 .about-items{
     display: flex;
     justify-content: space-around;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
